--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <body>
   <div class="container">
-    <div class="row my-5">
+    <div class="row my-5" style="margin-top:150px !important;">
+      <h1 class="text-center mb-5">COLORES CRUD</h1>
       <div class="col-8">
         <input type="text" placeholder="ingresa un color" class="form-control" id="color" />
       </div>
